Fix for #168 layout issue

--- a/nodel-webui-js/src/theme.less
+++ b/nodel-webui-js/src/theme.less
@@ -829,6 +829,9 @@ div.nodel-charts {
   }
 }
 .nodel-log {
+  .flex input {
+    min-width: 0;
+  }
   .jsonnumber, .jsonnull, .jsonboolean, .jsonstring {
     color: @brand-info;
   }
